Fixed unclickable nav on mobile

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -3,8 +3,6 @@ section.hero {
     display: flex;
     align-items: center;
     margin-bottom: 0;
-    position: relative;
-    z-index: -2;
 }
 
 .hero .container {
