--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -13,12 +13,23 @@ nav .container {
     height: 100%;
 }
 
+nav .background {
+    background-color: #ffffff;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
 nav ul {
     list-style-type: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    z-index: 1;
 }
 
 nav ul li {
@@ -66,6 +77,7 @@ nav .person {
     flex-direction: column;
     flex-shrink: 0;
     align-items: center;
+    z-index: 1;
 }
 
 nav .name {
@@ -155,7 +167,7 @@ nav.active .mobile-menu-icon .bar:nth-child(3) {
         box-shadow: 0 5px 5px var(--box-shadow-color);
         padding-bottom: 20px;
         transition: top 0.4s;
-        z-index: -1;
+        z-index: 0;
     }
 
     nav.active ul {
@@ -188,5 +200,6 @@ nav.active .mobile-menu-icon .bar:nth-child(3) {
 
     nav ul .button a {
         width: calc(100% - 30px);
+        height: 100%;
     }
 }
